Fix semantic whitespace in lang selector
and add CSS margins instead

--- a/assets/scss/layouts/_header.scss
+++ b/assets/scss/layouts/_header.scss
@@ -144,6 +144,11 @@
   height: 0;
 }
 
+span#doks-language-current {
+  margin-left: 0.2rem;
+  margin-right: 0.1rem;
+}
+
 button#doks-languages {
   margin: 0.25rem 0 0;
 
@@ -168,7 +173,7 @@ button#doks-versions {
 }
 
 .offcanvas-header {
-  border-bottom: 1px solid $gray-300;  
+  border-bottom: 1px solid $gray-300;
   padding-top: 1.0625rem;
   padding-bottom: 0.8125rem;
 }
@@ -587,7 +592,7 @@ h5.offcanvas-title {
   .navbar-nav {
     margin-top: 1rem;
   }
-  
+
   .dropdown-menu {
     box-shadow: none !important;
     background: transparent !important;
